fixed white background overflow

--- a/style.css
+++ b/style.css
@@ -142,14 +142,14 @@ label{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 18rem;
+    padding-bottom: 10rem;
     padding-top: 2rem;
 }
 
 .form-box {
     position: relative;
     width: 80%;
-    height: 640px;
+    height: 100%;
     border-radius: 3.3rem;
     top: 130px;
     display: flex;
@@ -170,15 +170,13 @@ label{
 }
 
 .form-content {
-    position: relative;
-    width: calc(100% - 4.1rem);
-    height: calc(100% - 4.1rem);
+    padding: 2rem;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 0.5rem;
 }
 
 .form-content--header {
@@ -283,10 +281,19 @@ input::placeholder{
 .input-days{
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: start;
 }
 
-.input-days-option{
-    padding: 10px;
+.input-days-other{
+    display: flex;
+    gap: 2px;
+}
+
+.input-days-other .form-control {
+    flex-grow: 1; /* Permite que el input crezca dinámicamente */
+    min-width: 20px; /* Opcional: Define un ancho mínimo */
+    max-width: 100px;
 }
 
 form {
@@ -508,9 +515,7 @@ form {
 }
 
 @media (max-width: 412px){
-    .advantages-header{
-        padding-top: 120px;
-    }
+
     .header-image-wrap-mobile{
         flex-basis: 55%;
     }
